Add fancier gh-pages generation

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -7,3 +7,12 @@ clean:
 	rm -f html.meta
 
 rebuild: clean build
+
+update-gh-pages:
+	git checkout gh-pages
+	git merge master --no-edit
+	doxygen Doxyfile
+	git add html
+	git commit -m "Update documentation"
+	git checkout master
+
